2005-07-29  Vivek Jain <jvivek@novell.com>

	* org-gnome-groupwise-features.eplug.xml:
	for status strack  removed "Item" tag entries, included a factory method

	* status-track.c :  (org_gnome_track_status): converted to 
	 factory method to add the item, moved most of its code to
	new function (track_status), which is a callback for the click
	 **Fixes #311721

2005-07-27  Sankar P  <psankar@novell.com>

	* org-gnome-groupwise-features.eplug.xml: Added the hook for
	the proxy-login feature, since it was removed by mistake.
	
2005-07-23  Chenthill Palanisamy  <pchenthill@novell.com>

	* Makefile.am: Added the new file process-meeting.c
	and widgets/misc to include headers.
	* org-gnome-groupwise-features.eplug.xml: Added the
	hook for processing meetings.
	* org-gnome-shared-folder.errors.xml: Added the message
	for asking for error 

2005-07-22  Vivek Jain <jvivek@novell.com>
	
	* share-folder.c : Put back the fix I committed on 
	2005-03-31, not sure when it got reverted.
	**Fixes #311217

2005-07-20  Shreyas Srinivasan <sshreyas@novell.com>

	* proxy.c: Fix #310710. Make code little smart. Stop
	adding tabs continously. Still does not reuse structures
	on multiple invocations though.
	
2005-07-20  Vivek Jain <jvivek@novell.com>
	
	* mail-send-options.c: connect to sod-signal and get the input data in
	the callback "feed_input_data"
	** Fixes #310854

2005-07-20  Sankar P  <psankar@novell.com>

	* Consolidated the proxy and proxy-login plugins into the 
	groupwise-features plugins and merged the ChangeLogs and copied the 
	following files from their old plugins directories.

	* proxy.[ch]
	* proxy-login.[ch]
	* org-gnome-proxy-errors.xml
	* org-gnome-proxy-login-errors.xml
	* proxy-login-dialog.glade
	* proxy-listing.glade
	* proxy-add-dialog.glade

2005-07-19  Vivek Jain <jvivek@novell.com>

	* junk-mail-settings.c: Marked strings for translation

2005-07-15  Sankar P  <psankar@novell.com>

	* proxy-login.h: Removed the permissions from the structure, 